--- a/bubble/CMakeLists.txt
+++ b/bubble/CMakeLists.txt
@@ -15,12 +15,25 @@ set(VITA_TITLEID  "PSPEMUCFW")
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
+set(VITA_MAKE_FSELF_FLAGS "${VITA_MAKE_FSELF_FLAGS} -a 0x2800000000000001")
 
 add_executable(adrenaline
   main.c
+  utils.c
+  graphics.c
+  font.c
 )
 
 target_link_libraries(adrenaline
+  taiHEN_stub
+  SceAppMgr_stub
+  SceCtrl_stub
+  SceDisplay_stub
+  SceHttp_stub
+  SceNet_stub
+  SceNetCtl_stub
+  SceSysmodule_stub
+  ScePgf_stub_weak
 )
 
 vita_create_self(eboot.bin adrenaline UNSAFE)
@@ -31,6 +44,11 @@ vita_create_vpk(Adrenaline.vpk ${VITA_TITLEID} eboot.bin
        pkg/sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
        pkg/sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
        pkg/sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
+       pkg/eboot.pbp eboot.pbp
+	   pkg/sce_module/usbdevice.skprx sce_module/usbdevice.skprx
+	   pkg/sce_module/adrenaline_kernel.skprx sce_module/adrenaline_kernel.skprx
+	   pkg/sce_module/adrenaline_user.suprx sce_module/adrenaline_user.suprx
+	   pkg/sce_module/adrenaline_vsh.suprx sce_module/adrenaline_vsh.suprx
 )
 
 add_custom_target(copy
