--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -16,6 +16,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
 add_executable(adrenaline_user
   main.c
+  pops.c
+  titleinfo.c
   flashfs.c
   msfs.c
   menu.c
