Move VPK to a separate CMakeLists and include others as dependencies.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -1,25 +1,16 @@
 cmake_minimum_required(VERSION 2.8)
 
-if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-  if(DEFINED ENV{VITASDK})
-    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
-  else()
-    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
-  endif()
-endif()
-
 project(adrenaline_kernel)
-include("${VITASDK}/share/vita.cmake" REQUIRED)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3 -nostdlib")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
-add_executable(adrenaline_kernel
+add_executable(${PROJECT_NAME}
   main.c
   utils.c
 )
 
-target_link_libraries(adrenaline_kernel
+target_link_libraries(${PROJECT_NAME}
   taihenForKernel_stub
   SceCpuForDriver_stub
   SceCtrlForDriver_stub
@@ -33,21 +24,20 @@ target_link_libraries(adrenaline_kernel
   SceThreadmgrForDriver_stub
 )
 
-vita_create_self(adrenaline_kernel.skprx adrenaline_kernel CONFIG exports.yml UNSAFE)
+vita_create_self(${PROJECT_NAME}.skprx ${PROJECT_NAME} CONFIG exports.yml UNSAFE)
 
-vita_create_stubs(stubs adrenaline_kernel ${CMAKE_SOURCE_DIR}/exports.yml KERNEL)
+vita_create_stubs(${PROJECT_NAME}_stubs ${PROJECT_NAME} exports.yml KERNEL)
 
 install(DIRECTORY ${CMAKE_BINARY_DIR}/stubs/
   DESTINATION lib
   FILES_MATCHING PATTERN "*.a"
 )
 
-add_custom_target(copy
-  COMMAND cp adrenaline_kernel.skprx F:/app/PSPEMUCFW/sce_module/adrenaline_kernel.skprx
-  DEPENDS adrenaline_kernel.skprx
-)
+if(NOT PKG_PATH)
+  set(PKG_PATH ../../bubble/pkg)
+endif(NOT PKG_PATH)
 
-add_custom_target(pkg
-  COMMAND cp adrenaline_kernel.skprx ../../bubble/pkg/sce_module/adrenaline_kernel.skprx
-  DEPENDS adrenaline_kernel.skprx
+add_custom_target(pkg_kernel
+  COMMAND cp ${PROJECT_NAME}.skprx ${PKG_PATH}/sce_module/${PROJECT_NAME}.skprx
+  DEPENDS ${PROJECT_NAME}.skprx
 )
