--- a/vsh/CMakeLists.txt
+++ b/vsh/CMakeLists.txt
@@ -1,40 +1,30 @@
 cmake_minimum_required(VERSION 2.8)
 
-if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-  if(DEFINED ENV{VITASDK})
-    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
-  else()
-    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
-  endif()
-endif()
-
 project(adrenaline_vsh)
-include("${VITASDK}/share/vita.cmake" REQUIRED)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3 -nostartfiles")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
-add_executable(adrenaline_vsh
+add_executable(${PROJECT_NAME}
   main.c
   utils.c
 )
 
-target_link_libraries(adrenaline_vsh
-  taiHEN_stub
+target_link_libraries(${PROJECT_NAME}
+  taihen_stub
   SceAppMgr_stub
   SceLsdb_stub_weak
 )
 
-vita_create_self(adrenaline_vsh.suprx adrenaline_vsh CONFIG exports.yml UNSAFE)
+vita_create_self(${PROJECT_NAME}.suprx ${PROJECT_NAME} CONFIG exports.yml UNSAFE)
 
-vita_create_stubs(stubs adrenaline_vsh ${CMAKE_SOURCE_DIR}/exports.yml)
+vita_create_stubs(${PROJECT_NAME}_stubs ${PROJECT_NAME} exports.yml)
 
-add_custom_target(copy
-  COMMAND cp adrenaline_vsh.suprx F:/app/PSPEMUCFW/sce_module/adrenaline_vsh.suprx
-  DEPENDS adrenaline_vsh.suprx
-)
+if(NOT PKG_PATH)
+  set(PKG_PATH ../../bubble/pkg)
+endif(NOT PKG_PATH)
 
-add_custom_target(pkg
-  COMMAND cp adrenaline_vsh.suprx ../../bubble/pkg/sce_module/adrenaline_vsh.suprx
-  DEPENDS adrenaline_vsh.suprx
+add_custom_target(pkg_vsh
+  COMMAND cp ${PROJECT_NAME}.suprx ${PKG_PATH}/sce_module/${PROJECT_NAME}.suprx
+  DEPENDS ${PROJECT_NAME}.suprx
 )
