Revert "Merge pull request #196 from Florin9doi/master"
This reverts commit e0824716a75cdd1159769f38626e52eeaa2170bc, reversing
changes made to 1b20471b6dda8e3787f1d066e0c08bfce4231b59.

--- a/bubble/CMakeLists.txt
+++ b/bubble/CMakeLists.txt
@@ -1,19 +1,30 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(adrenaline_bubble)
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  if(DEFINED ENV{VITASDK})
+    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
+  else()
+    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
+  endif()
+endif()
+
+project(adrenaline)
+include("${VITASDK}/share/vita.cmake" REQUIRED)
+set(VITA_APP_NAME "Adrenaline")
+set(VITA_TITLEID  "PSPEMUCFW")
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 set(VITA_MAKE_FSELF_FLAGS "${VITA_MAKE_FSELF_FLAGS} -a 0x2800000000000001")
 
-add_executable(${PROJECT_NAME}
+add_executable(adrenaline
   main.c
   utils.c
   graphics.c
   font.c
 )
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(adrenaline
   taihen_stub
   SceAppMgr_stub
   SceCtrl_stub
@@ -25,13 +36,22 @@ target_link_libraries(${PROJECT_NAME}
   ScePgf_stub_weak
 )
 
-if(NOT PKG_PATH)
-  set(PKG_PATH ${CMAKE_SOURCE_DIR}/pkg)
-endif(NOT PKG_PATH)
+vita_create_self(eboot.bin adrenaline UNSAFE)
+vita_create_vpk(Adrenaline.vpk ${VITA_TITLEID} eboot.bin
+  VERSION ${VITA_VERSION}
+  NAME ${VITA_APP_NAME}
+  FILE pkg/sce_sys/icon0.png sce_sys/icon0.png
+       pkg/sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
+       pkg/sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
+       pkg/sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
+       pkg/eboot.pbp eboot.pbp
+	   pkg/sce_module/usbdevice.skprx sce_module/usbdevice.skprx
+	   pkg/sce_module/adrenaline_kernel.skprx sce_module/adrenaline_kernel.skprx
+	   pkg/sce_module/adrenaline_user.suprx sce_module/adrenaline_user.suprx
+	   pkg/sce_module/adrenaline_vsh.suprx sce_module/adrenaline_vsh.suprx
+)
 
-vita_create_self(eboot.bin ${PROJECT_NAME} UNSAFE)
-
-add_custom_target(pkg_bubble ALL
-  COMMAND cp eboot.bin ${PKG_PATH}/eboot.bin
+add_custom_target(copy
+  COMMAND cp eboot.bin F:/app/${VITA_TITLEID}/eboot.bin
   DEPENDS eboot.bin
 )
