--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -1,11 +1,20 @@
 cmake_minimum_required(VERSION 2.8)
 
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  if(DEFINED ENV{VITASDK})
+    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
+  else()
+    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
+  endif()
+endif()
+
 project(adrenaline_user)
+include("${VITASDK}/share/vita.cmake" REQUIRED)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3 -nostartfiles")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
-add_executable(${PROJECT_NAME}
+add_executable(adrenaline_user
   main.c
   pops.c
   titleinfo.c
@@ -18,7 +27,7 @@ add_executable(${PROJECT_NAME}
   lz4/lz4.c
 )
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(adrenaline_user
   AdrenalineKernel_stub
   taihen_stub
   vita2d
@@ -52,15 +61,16 @@ target_link_libraries(${PROJECT_NAME}
   SceVshBridge_stub
 )
 
-vita_create_self(${PROJECT_NAME}.suprx ${PROJECT_NAME} CONFIG exports.yml UNSAFE)
+vita_create_self(adrenaline_user.suprx adrenaline_user CONFIG exports.yml UNSAFE)
 
-vita_create_stubs(${PROJECT_NAME}_stubs ${PROJECT_NAME} exports.yml)
+vita_create_stubs(stubs adrenaline_user ${CMAKE_SOURCE_DIR}/exports.yml)
 
-if(NOT PKG_PATH)
-  set(PKG_PATH ../../bubble/pkg)
-endif(NOT PKG_PATH)
+add_custom_target(copy
+  COMMAND cp adrenaline_user.suprx F:/app/PSPEMUCFW/sce_module/adrenaline_user.suprx
+  DEPENDS adrenaline_user.suprx
+)
 
-add_custom_target(pkg_user
-  COMMAND cp ${PROJECT_NAME}.suprx ${PKG_PATH}/sce_module/${PROJECT_NAME}.suprx
-  DEPENDS ${PROJECT_NAME}.suprx
+add_custom_target(pkg
+  COMMAND cp adrenaline_user.suprx ../../bubble/pkg/sce_module/adrenaline_user.suprx
+  DEPENDS adrenaline_user.suprx
 )
